# mridumanda

./: LOG.md  README.md  pyproject.toml
src/mridu_manda/: ascii_arts.py  config.py  fetch_city.py  main.py  parse_weather.py  print_weather.py  report_generation.py
