[project]
name = "mridu-manda"
version = "1.0.8"
description = ""
authors = [
    {name = "Shvetank Dattatreya", email = "hello.shvetank@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "rich (>=14.3.2,<15.0.0)"
]

[tool.poetry]
name = "mridu_manda"
packages = [{include = "mridu_manda", from = "src"}]

[tool.poetry.scripts]
mridu_manda = "mridu_manda.main:main"
mrdmnd = "mridu_manda.main:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
